EquinoxWeather/Pages/WeatherDisplay.razor.css
.weather-main {
    padding: 2rem 1rem;
    text-align: center;
    max-width: 500px;
    margin: auto;
    /*    background-color: rgb(255, 255, 255, 0.1);
    border: 1px solid rgba(255, 255, 255, 0.2);*/
    border-radius: 2rem;
    transition: all 0.3s ease;
}

.temperature-container {
    display: flex;
    justify-content: center;
    margin-left: 1.8rem;
}

.temperature {
    font-size: 8rem;
    margin: 0;
}

.degree-symbol {
    font-size: 2rem;
}

.location {
    font-size: 3rem;
}

.feels-like {
    font-weight: normal;
    font-size: 1.5rem;
}

.header-pill {
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
}

.github-link{
    font-size: 150%;
    color: #b8f5ff;
}

.footer-link-container {
    background-color: rgb(192, 192, 192, 0.1);
    border: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 1rem;
    transition: all 0.3s ease;
}

    .footer-link-container:hover {
        background-color: rgba(255, 255, 255, 0.2);
        border: 1px solid rgba(255, 255, 255, 0.4);
    }

    .footer-link {
        color: #b8f5ff;
        text-decoration: none;
        font-weight: 500;
    }

.photo-credits-container {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.photo-credits {
    color: #b8f5ff;
    text-decoration: none;
    font-weight: 500;
}

